# Robograde

./: .gitignore  LICENCE.txt  README.md
proj/: CMakeLists.txt  generateDeveloperSolution.bat  generateReleaseSolution.bat
src/audio/: AudioDLLExport.h  AudioEngine.cpp  AudioEngine.h  BeatManager.cpp  BeatManager.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelFader.cpp  ChannelFader.h  ListenerOrientation.h  Sound.cpp  Sound.h  Wav_data.h
src/audio/sdl/: AudioBuffer.h  AudioEngineSDL.cpp  AudioEngineSDL.h  AudioFileReader.h  ChannelSDL.cpp  ChannelSDL.h  OggFileReader.cpp  OggFileReader.h  SoundSDL.cpp  SoundSDL.h  WavFileReader.cpp  WavFileReader.h
src/collisionDetection/: CMakeLists.txt  ICollisionDetection.cpp  ICollisionDetection.h
src/collisionDetection/detection/: FrustumOBB.cpp  FrustumOBB.h  FrustumSphere.cpp  FrustumSphere.h  IntersectionTestLookupTable.cpp  IntersectionTestLookupTable.h  PlaneOBB.cpp  PlaneOBB.h  PlaneSphere.cpp  PlaneSphere.h  RayHeightMap.cpp  RayHeightMap.h  RayOBB.cpp  RayOBB.h  RayPlane.cpp  RayPlane.h  RaySphere.cpp  RaySphere.h
src/collisionDetection/engine/: CollisionDetection.cpp  CollisionDetection.h  CollisionDetection_Picking.cpp  CollisionDetection_VolumeAdd.cpp
src/collisionDetection/entity/: Entity.cpp  Entity.h  ICollisionEntity.h
src/collisionDetection/test/: CollisionLibraryInterfaceTest.cpp  CollisionVolumesTest.cpp  RayVsPlaneTest.cpp  RayVsSphereTest.cpp
src/collisionDetection/volume/: Frustum.cpp  Frustum.h  HeightMap.cpp  HeightMap.h  OBB.cpp  OBB.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Volume.h
src/core/: CMakeLists.txt  CallbackMessage.h  CompileFlags.h  Engine.cpp  Engine.h  EntityFactory.cpp  EntityFactory.h  Main.cpp
src/core/ai/: AICommands.h  AIMessages.h  AIPlayer.cpp  AIPlayer.h  Agent.cpp  Agent.h  NLayer.cpp  NLayer.h  NNetwork.cpp  NNetwork.h  Node.h  PathFinder.cpp  PathFinder.h  Squad.cpp  Squad.h  Terrain.cpp  Terrain.h  stdafx.h
src/core/binding/: ConfigScriptBindings.h
src/core/camera/: Camera.cpp  Camera.h  CameraFirstPerson.cpp  CameraFirstPerson.h  CameraRTS.cpp  CameraRTS.h  CameraSpline.cpp  CameraSpline.h  Camera_Test.cpp
src/core/component/: AgentComponent.h  AnimationComponent.h  ChildComponent.h  CollisionComponent.h  ColourComponent.h  ControlPointComponent.h  DecalComponent.h  DoodadComponent.h  FollowMouseComponent.h  HealthComponent.h  ModelComponent.h  OwnerComponent.h  ParentComponent.h  ParticleEmitterComponent.h  PlacementComponent.h  ResourceComponent.h  SFXEmitterComponent.h  SelectionComponent.h  StealthComponent.h  TerrainFollowComponent.h  UpgradeComponent.h  VisionComponent.h  WeaponComponent.h
src/core/datadriven/: BaseCollection.h  CollectionFactory.h  ComponentHelper.h  ComponentTypes.h  DenseComponentCollection.h  EntityManager.cpp  EntityManager.h
src/core/input/: Action.h  GameMessages.cpp  GameMessages.h
src/core/picking/: Picking.cpp  Picking.h  PickingType.h
src/core/subsystem/: Subsystem.cpp  Subsystem.h  SubsystemManager.cpp  SubsystemManager.h  SubsystemManagerScriptBinder.h
src/core/test/: FirstTest.cpp
src/core/utility/: Alliances.cpp  Alliances.h  Catalogue.cpp  Catalogue.h  GameData.cpp  GameData.h  GameModeSelector.cpp  GameModeSelector.h  GameSpeedController.cpp  GameSpeedController.h  GlobalDefinitions.h  PlayerData.h  (+5 more)
src/gfx/: AnimatedRenderProgram.cpp  AnimatedRenderProgram.h  Animation.cpp  Animation.h  AnimationBank.cpp  AnimationBank.h  AnimationStructs.h  AnimationTypes.h  BasicRenderProgram.cpp  BasicRenderProgram.h  BlurProgram.cpp  BlurProgram.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  DebugRenderer.cpp  DebugRenderer.h  DecalManager.cpp  DecalManager.h  DeferredGeometryRenderProgram.cpp  DeferredGeometryRenderProgram.h  DeferredLightProgram.cpp  DeferredLightProgram.h  DefferedDecalProgram.cpp  DefferedDecalProgram.h  DepthBuffer.cpp  DepthBuffer.h  GBuffer.cpp  GBuffer.h  GFXLibraryDefine.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsInterface.h  LightEngine.cpp  LightEngine.h  Lights.h  LineRenderProgram.cpp  LineRenderProgram.h  Material.cpp  Material.h  (+24 more)
src/gui/: CMakeLists.txt  GUIEngine.cpp  GUIEngine.h  GUIScriptFunctions.cpp  GUIScriptFunctions.h
src/input/: CMakeLists.txt  Input.cpp  Input.h  InputLibraryDefine.h  KeyBindingCollection.cpp  KeyBindingCollection.h  KeyBindings.cpp  KeyBindings.h  TextInput.cpp  TextInput.h  Typedefs.h
src/memory/: Alloc.cpp  Alloc.h  AllocationPatterns.cpp  AllocationPatterns.h  Allocator.cpp  Allocator.h  CMakeLists.txt  FrameAllocator.cpp  FrameAllocator.h  MemoryLibraryDefine.h  STLAllocator.h  rString.cpp  rString.h
src/messaging/: CMakeLists.txt  GameMessages.cpp  GameMessages.h  Message.cpp  Message.h  MessageLibraryDefine.h  Subscriber.cpp  Subscriber.h
src/network/: CMakeLists.txt  IPv4Adress.cpp  IPv4Adress.h  NetworkEngine.cpp  NetworkEngine.h  NetworkInfo.cpp  NetworkInfo.h  NetworkLibraryDefine.h  NetworkMessages.cpp  NetworkMessages.h  NetworkUtility.cpp  NetworkUtility.h  PacketPump.cpp  PacketPump.h  Pinger.cpp  Pinger.h  TCPListener.cpp  TCPListener.h  TCPSocket.cpp  TCPSocket.h
src/profiler/: AutoGPUProfiler.cpp  AutoGPUProfiler.h  AutoProfiler.cpp  AutoProfiler.h  CMakeLists.txt  GPUProfiler.cpp  GPUProfiler.h  ProfileEntry.cpp  ProfileEntry.h  ProfileMacro.h  Profiler.cpp  Profiler.h
src/script/: CMakeLists.txt  IScriptEngine.h  LuaAllocator.h  ScriptEngine.cpp  ScriptEngine.h
src/utility/: CMakeLists.txt  CallbackCollection.cpp  CallbackCollection.h  CallbackConfig.cpp  CallbackConfig.h  CallbackMessage.cpp  CallbackMessage.h  CallbackPump.cpp  CallbackPump.h  Colors.h  ColourConversion.h  Colours.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  DataSizes.h  FileUtility.cpp  FileUtility.h  FrameCounter.cpp  FrameCounter.h  GameTimer.cpp  GameTimer.h  Handle.h  HandleAllocator.h  LocklessQueue.h  Logger.cpp  Logger.h  NeatFunctions.h  PlatformDefinitions.h  Randomizer.h  RetardedWindowsIncludes.h  SerializationUtility.cpp  SerializationUtility.h  StringUtility.h  ThreadingUtility.h  UtilityLibraryDefine.h
(+314 files in other folders)
